syntax = "proto3";

package ddm;

option go_package = "proto";

// DDM Documentation:
//
// SetActiveInput [DVI2/HDMI/DP2,etc] - switches active input
// RestoreFactoryDefaults - restores factory defaults*
// AutoSetup - executes an autosetup (analog only)*
// RestoreLevelDefaults - restores level defaults*
// RestoreColorDefaults - restores color defaults*
// SetBrightnessLevel X - sets brightness to X% (0-100)*
// SetContrastLevel X - sets contrast to X% (0-100)*
// SetNamedPreset [Movie/CAL1,etc] - changes the Preset mode*
// SetPowerMode [on/off] - sets the display power mode*
// SetOptimalResolution - switches to optimal resolution
// SaveProfile [Name] - save settings to named profile*
// RestoreProfile [Name] - restore settings from named profile*
// DeleteProfile [Name] - delete named profile
// SetGridType [X] - changes Easy Arrange grid type to X
// Rescan - rescans display hardware
// ForceReset - reconnects and rescans display hardware
// SetControl X Y - sets hex control X to hex value Y
// IncControl X Y - increases the value of control X by Y
// DecControl X Y - decreases the value of control X by Y
// Zoom - switches between PxP and fullscreen mode
// Wait X - pause X milliseconds
// Exit - terminates the program

service DisplayManager {
  rpc SwitchInput(SwitchInputRequest) returns (SwitchInputResponse);
}

message SwitchInputRequest {
  enum InputType {
    USB_C = 0;
    DP1 = 1;
  }

  InputType input = 1;
}

message SwitchInputResponse {
  bool okay = 1;
  string error = 2;
}